Fix align

--- a/CrossfitDiary/CrossfitDiary.Web/Content/pages/home.scss
+++ b/CrossfitDiary/CrossfitDiary.Web/Content/pages/home.scss
@@ -5,6 +5,8 @@
         .done-item {
             background: #f6f1ed;
             box-shadow: 0 0.20rem 0.1rem rgba(0, 0, 0, .05);
+            font-size: 13px;
+
             .item-header {
                 border-bottom: 1px dashed #a6a6a6;
                 font-size: 15px;
